# Optimal-Frenet-Planning-CARLA

./: README.md
ros-bridge/carla_ad_agent/: CMakeLists.txt
ros-bridge/carla_ad_agent/launch/: carla_ad_agent.launch
ros-bridge/carla_ad_agent/src/carla_ad_agent/: basic_agent.py  carla_ad_agent.py  evaluate.py  frenet_trajectory.py  my_local_planner.py  spawn_npc.py  vehicle_mpc_controller.py  vehicle_pid_controller.py
ros-bridge/carla_ad_demo/config/: carla_ad_demo.rviz
ros-bridge/carla_ad_demo/launch/: carla_ad_demo.launch  carla_ad_demo_with_rviz.launch  carla_ad_demo_with_scenario.launch
ros-bridge/carla_ego_vehicle/config/: no_sensors.json
ros-bridge/carla_ros_bridge/config/: settings.yaml
ros-bridge/carla_ros_bridge/src/carla_ros_bridge/: bridge.py  transforms.py
ros-bridge/carla_waypoint_publisher/src/carla_waypoint_publisher/: carla_waypoint_publisher.py
ros-bridge/carla_waypoint_types/: CMakeLists.txt
ros-bridge/carla_waypoint_types/msg/: CarlaLaneMarking.msg  CarlaWaypoint.msg
url_sdv_carla/ee585_vehicle_gen/: CMakeLists.txt  package.xml
url_sdv_carla/ee585_vehicle_gen/config/: ee585_carlasim.rviz  ee585_sensors.json
url_sdv_carla/ee585_vehicle_gen/launch/: vehicle_gen.launch
