<?xml version="1.0"?>
<package format="2">
  <name>ee585_vehicle_gen</name>
  <version>0.0.0</version>
  <description>The ee585_vehicle_gen package</description>
  <maintainer email="minho.oh@kaist.ac.kr">Minho Oh</maintainer>
  <license>URL_KAIST</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>carla_ad_agent</exec_depend>
  <exec_depend>carla_ego_vehicle</exec_depend>
  <exec_depend>carla_manual_control</exec_depend>
  <exec_depend>carla_ros_bridge</exec_depend>
  <exec_depend>carla_ros_scenario_runner</exec_depend>
  <exec_depend>carla_spectator_camera</exec_depend>
  <exec_depend>carla_twist_to_control</exec_depend>
  <exec_depend>carla_waypoint_publisher</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>rviz_carla_plugin</exec_depend>
  <export>
  </export>
</package>
